Update Dockerfiles 2 and custom_image

--- a/2/Dockerfile
+++ b/2/Dockerfile
@@ -1,19 +1,4 @@
-FROM debian:11-slim
-
-ENV LANG C.UTF-8
-
-RUN set -eux; \
-	apt-get update; \
-	apt-get install -y --no-install-recommends \
-    ca-certificates \
-		netbase \
-		tzdata \
-        ; \
-        rm -rf /var/lib/apt/lists/*
-
-RUN apt-get update && apt-get install -y python3.9 python3.9-dev
-RUN apt-get update && apt-get install python3-pip -y
-RUN ln -s /usr/bin/python3 /usr/bin/python
+FROM tsantana_containerized_python_app:1.0
 
 WORKDIR /usr/src/app
 
