Fix lint erros in dockerfiles and update readme

--- a/custom_image/Dockerfile
+++ b/custom_image/Dockerfile
@@ -11,8 +11,12 @@ RUN set -eux; \
         ; \
         rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update && apt-get install -y python3.9 python3.9-dev
-RUN apt-get update && apt-get install python3-pip -y
+RUN apt-get update && apt-get install python=3.9 python=3.9-dev -y --no-install-recommends ;\
+	rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install python3-pip -y --no-install-recommends ;\
+	rm -rf /var/lib/apt/lists/*
+
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
 CMD [ "python" ]
